Supp comm & ajout bouton

--- a/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
+++ b/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
@@ -63,18 +63,11 @@
             <td>
               <div class="bouton">
                 <a href="tabMaregrapheMeta/{{i.id_tdb}}/{{i.libelle}}"><button class="acceder" type="button">Accéder</button></a>
-                <!--button class="editer" type="button" (click)="show_modif_maregraphe(i.id_tdb, i.libelle, i.latitude, i.longitude)">Editer</button>
-                <button class="Supprimer" type="button" (click)="deleteMaregraphe(i.id_tdb)">Supprimer</button-->
+                <button class="editer" type="button" >Editer</button>
+                <button class="Supprimer" type="button">Supprimer</button>
               </div>
             </td>
-          <!--
-            <td>
-            <div class="bouton">
-              <button class="Editer"  type="button">Editer</button>
-              <button class="Supprimer" type="button" (click)="deleteMeta(i.id_maregraphe, i.id_meta)">Supprimer</button>
-            </div>
-          </td>
-          -->
+
         </tr>
       </tbody>
     </table>
