--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.html
@@ -12,7 +12,7 @@
       <p class="infos_page">Identifiant du marégraphe : {{id_maregraphe}}</p>
       <p class="infos_page">Ville : {{ville_maregraphe}}</p>
       <div class="button_header">
-        <a href="tabChoixMaregraphe"><button class="bouton_retour">Retour</button></a>
+        <a href="{{origine}}"><button class="bouton_retour">Retour</button></a>
         <button class="Ajouter" id="Ajouter"  type="button" (click)="showAddMeta()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter une métadonnée</button>
       </div>
 
