--- a/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
+++ b/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.html
@@ -18,10 +18,10 @@
     </div>
   
 
-    <div class="fond_form" id="hide_form">
-      <div class="form_add_meta">
+    <div class="fond_form" id="hide_form_add">
+      <div class="form">
         <span class="close-button" (click)="annuler()">&times;</span>
-        <h2>Ajouter une métadonnée</h2>
+        <h2>Ajouter un marégraphe</h2>
         <form [formGroup]="formAddMaregraphe">
           <label for="maregraphe">Identifiant du marégraphe : </label>
           <select formControlName="maregraphe">
