--- a/FrontEnd/src/styles.css
+++ b/FrontEnd/src/styles.css
@@ -88,7 +88,7 @@
 /*******************************************/
 
 
-.acceder, .editer{
+.acceder, .editer, .annuler{
     background-color: white;
     color: black;
     display: inline-block;
