--- a/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.css
+++ b/FrontEnd/src/app/component/choix_partenaire/choix_partenaire.component.css
@@ -2,29 +2,10 @@
     color: black;
 }
 
-
-#hide_form_add{
-    display:none;
-}
-
-.form_add_meta {
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
+.form{
     margin-top: 13%;
-    margin-left: 35%;
-    position: relative;
 }
 
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-}
 
 .bouton{
     display: flex;
@@ -47,8 +28,6 @@
     gap: 10px;
 
 }
-
-  
 
 .maj_partenaire, .supp_partenaire{
     border-radius: 6px;
