--- a/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
+++ b/FrontEnd/src/app/component/tab_maregraphemeta/tab_maregraphemeta.component.css
@@ -19,14 +19,6 @@ input:focus, select:focus {
     border: 3px solid #555;
 }
 
-/* Bouton pour fermer le modal */
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-}
 
 .bouton{
     display: flex;
@@ -109,5 +101,27 @@ table, td, th {
 
 .button_header{
     display: flex;
-    justify-content: space-around;
+    background-color: #555;
+    text-align: center;
+}
+
+.Ajouter{
+    text-align: center;
+}
+
+
+.bouton_retour{
+    background-color: white;
+    color: black;
+    border-radius: 6px;
+    border-color: #C4C3C3;
+    text-align: center;
+    font-size: 14px;
+    width: 100px;
+    margin: 2.5px;
+    border: 2px solid #C4C3C3;
+    
+    padding: 10px;
+    gap: 10px;
+    align-items: end;
 }
