--- a/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.css
+++ b/FrontEnd/src/app/component/tab_partenairemaregraphe/tab_partenairemaregraphe.component.css
@@ -2,17 +2,11 @@
     margin-top: 7%;
 }
 
-.form_add_meta {
+.form_add{
     transform: scale(1.5);
-    background-color: #fff;
-    padding: 20px;
-    border-radius: 8px;
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-    width: 400px;
     margin-top: 13%;
-    margin-left: 35%;
-    position: relative;
 }
+
 
 /* Style ajouté aux zones de saisie des formulaire */
 input, select {
@@ -30,14 +24,6 @@ input:focus, select:focus {
     border: 3px solid #555;
 }
 
-/* Bouton pour fermer le modal */
-.close-button {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    font-size: 20px;
-    cursor: pointer;
-}
 
 .bouton{
     display: flex;
