--- a/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
+++ b/FrontEnd/src/app/component/choix_maregraphe/choix_maregraphe.component.html
@@ -8,33 +8,61 @@
   Chargement des données ...
 </div>
 <div [class.affiche]="isDataLoaded" [class.invisible]="!isDataLoaded" >
-  <!-------------------- Formulaire d'aout d'un marégraphe -------------------->
-  <button class="Ajouter" id="Ajouter"  type="button" (click)="showAddMaregraphe()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter un marégraphe</button>
 
-  <div class="fond_form" id="hide_form_add">
-    <div class="form">
-      <span class="close-button" (click)="annuler()">&times;</span>
-      <h2>Ajouter un marégraphe</h2>
-      <form [formGroup]="formAddMaregraphe">
-        <label for="ville">Ville : </label>
-        <input type="text" id="ville" formControlName="ville"><br><br>
-
-        <label for="id_maregraphe">Identifiant du marégraphe : </label>
-        <input type="text" id="id_maregraphe" formControlName="id_maregraphe"><br><br>
-
-        <label for="latitude">Latitude : </label>
-        <input type="number" id="latitude" formControlName="latitude"><br><br>
-
-        <label for="longitude">Longitude : </label>
-        <input type="number" id="longitude" formControlName="longitude"><br><br>
-      </form>
-      <div class="bouton">
-        <button class="ajout"  type="submit" (click)="addMaregraphe()">Créer</button>
-        <button class="supp" id="supp" type="delete"  (click)="annuler()">Annuler</button>
+  <div *ngIf="isAdmin">
+    <button class="Ajouter" id="Ajouter"  type="button" (click)="showAddMaregraphe()"> <img src="assets\fleche.png" height="17" width="17"> Ajouter un marégraphe</button>
+    <!-------------------- Formulaire d'aout d'un marégraphe -------------------->
+    <div class="fond_form" id="hide_form_add">
+      <div class="form">
+        <span class="close-button" (click)="annuler()">&times;</span>
+        <h2>Ajouter un marégraphe</h2>
+        <form [formGroup]="formAddMaregraphe">
+          <label for="ville">Ville : </label>
+          <input type="text" id="ville" formControlName="ville"><br><br>
+  
+          <label for="id_maregraphe">Identifiant du marégraphe : </label>
+          <input type="text" id="id_maregraphe" formControlName="id_maregraphe"><br><br>
+  
+          <label for="latitude">Latitude : </label>
+          <input type="number" id="latitude" formControlName="latitude"><br><br>
+  
+          <label for="longitude">Longitude : </label>
+          <input type="number" id="longitude" formControlName="longitude"><br><br>
+        </form>
+        <div class="bouton">
+          <button class="ajout"  type="submit" (click)="addMaregraphe()">Créer</button>
+          <button class="supp" id="supp" type="delete"  (click)="annuler()">Annuler</button>
+        </div>
       </div>
     </div>
+    <!---------------------------------------------------------------------------->
+    <!-------------------- Formulaire de modification d'un marégraphe -------------------->
+    <div class="fond_form" id="hide_form_modif">
+      <div class="form">
+        <span class="close-button" (click)="annulerModif()">&times;</span>
+        <h2>Mettre à jour les informations du marégraphe</h2>
+        <form [formGroup]="formModifMaregraphe">
+          <label for="ville">Ville : </label>
+          <input type="text" id="ville" formControlName="ville"><br><br>
+
+          <label for="id_maregraphe">Identifiant du marégraphe : </label>
+          <input type="text" id="id_maregraphe" formControlName="id_maregraphe" readonly="readonly"><br><br>
+
+          <label for="latitude">Latitude : </label>
+          <input type="number" id="latitude" formControlName="latitude"><br><br>
+
+          <label for="longitude">Longitude : </label>
+          <input type="number" id="longitude" formControlName="longitude"><br><br>
+        </form>
+        <div class="bouton">
+          <button class="ajout"  type="submit" (click)="updateMaregraphe()">Modifier</button>
+          <button class="supp" id="supp" type="delete"  (click)="annulerModif()">Annuler</button>
+        </div>
+      </div>
+    </div>
+    <!---------------------------------------------------------------------------->
   </div>
-  <!---------------------------------------------------------------------------->
+
   <br><br><br>
   <table>    
     <thead>
@@ -55,8 +83,8 @@
         <td>
           <div class="bouton">
             <a href="tabMaregrapheMeta/{{i.id_tdb}}/{{i.libelle}}"><button class="acceder" type="button">Accéder</button></a>
-            <button class="editer" type="button" (click)="showModifMaregraphe(i.id_tdb, i.libelle, i.latitude, i.longitude)">Editer</button>
-            <button class="supp" type="button" (click)="deleteMaregraphe(i.id_tdb)">Supprimer</button>
+            <button *ngIf="isAdmin" class="editer" type="button" (click)="showModifMaregraphe(i.id_tdb, i.libelle, i.latitude, i.longitude)">Editer</button>
+            <button *ngIf="isAdmin" class="supp" type="button" (click)="deleteMaregraphe(i.id_tdb)">Supprimer</button>
           </div>
         </td>
       </tr>
@@ -64,27 +92,3 @@
   </table>
 </div>
 
-<!-------------------- Formulaire de modification d'un marégraphe -------------------->
-<div class="fond_form" id="hide_form_modif">
-  <div class="form">
-    <span class="close-button" (click)="annulerModif()">&times;</span>
-    <h2>Mettre à jour les informations du marégraphe</h2>
-    <form [formGroup]="formModifMaregraphe">
-      <label for="ville">Ville : </label>
-      <input type="text" id="ville" formControlName="ville"><br><br>
-
-      <label for="id_maregraphe">Identifiant du marégraphe : </label>
-      <input type="text" id="id_maregraphe" formControlName="id_maregraphe" readonly="readonly"><br><br>
-
-      <label for="latitude">Latitude : </label>
-      <input type="number" id="latitude" formControlName="latitude"><br><br>
-
-      <label for="longitude">Longitude : </label>
-      <input type="number" id="longitude" formControlName="longitude"><br><br>
-    </form>
-    <div class="bouton">
-      <button class="ajout"  type="submit" (click)="updateMaregraphe()">Modifier</button>
-      <button class="supp" id="supp" type="delete"  (click)="annulerModif()">Annuler</button>
-    </div>
-  </div>
-</div>
